portrait and landscape experience

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                         User centric developer that designs and develops productivity web applications as well as applications 
                         aimed at helping budding web developers gain valuable work experience.
                         <br><br>
-                        Long ago I realized that I liked to make tasks easier for people
+                        5 years ago I realized that I liked to make tasks easier for people
                         through code and development when I helped the backend developers
-                        at my first tech support job.  They developed a tester that had an interface That
+                        at my first tech support job.  They developed a stress test application with an interface that
                         was very confusing to use.
                         <br><br>
-                        That's when I took to learn HTML and CSS on my own. I made the whole experience more user friendly for myself and coworkers.
-                        After that, I became a fully self-taught developer. 
+                        I took to learn HTML and CSS on my own. In turn, I made the whole experience more user friendly for myself and coworkers.
+                        After that, I decided to teach myself in the craft of web development. 
                         <!-- I realized my love for development when I helped the backend developers
                         at my first tech support job improve the interface for a tester that they 
                         developed for ME to test their new build.  It was just too difficult to use.
@@ -105,7 +105,9 @@
                     </p>
 
                     <p class="brand_name_about">
-                        My brand is <b>CourDevelops</b>.
+                        While teaching myself to code, 
+                        
+                        I've also done freelance dev jobs under my brand <b>CourDevelops</b>.
                     </p>
 
                     <div class="about_page_Logo">
