--- a/index.html
+++ b/index.html
@@ -476,8 +476,58 @@
             <div class="blog_section_class">
                 <!-- For Content -->
                 <div class="blog_section_content">
+                    <!-- Section Title -->
                     <div class="section_title">
                         <p>Blog.</p>
+                    </div>
+                    <!-- Blog Circles -->
+                    <!-- The Blog Circles -->
+                    <div class="blog_circles">
+                        <!-- The First Circle -->
+                        <button class="blog_button" id="blog_one">
+                            <!-- Circle One -->
+                            <div class="blog_circle">
+                                <div class="back_blog">
+                                    <div class="front_blog">
+                                        <p>My User Interface Values</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Tag One -->
+                            <div class="tag_one">
+                                <p>tag-one</p>
+                            </div>
+                        </button>
+                        <!-- The Seconed Circle -->
+                        <button class="blog_button" id="blog_two">
+                            <!-- Circle Two -->
+                            <div class="blog_circle">
+                                <div class="back_blog">
+                                    <div class="front_blog">
+                                        <p>The Importance <br> of the <br> Gig Economy</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Tag One -->
+                            <div class="tag_two">
+                                <p>tag-two</p>
+                            </div>
+                        </button>
+                        <!-- The Third Circle -->
+                        <button class="blog_button" id="blog_three">
+                            <!-- Circle Three -->
+                            <div class="blog_circle">
+                                <div class="back_blog">
+                                    <div class="front_blog">
+                                        <p>For those getting into <br> development</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Tag One -->
+                            <div class="tag_three">
+                                <p>tag-three</p>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </div>
