blog landscape portrait display

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         was very confusing to use.
                         <br><br>
                         I took to learn HTML and CSS on my own. In turn, I made the whole experience more user friendly for myself and coworkers.
-                        After that, I decided to teach myself in the craft of web development. 
+                        After that, I decided to teach myself and work in the craft of web development. 
                         <!-- I realized my love for development when I helped the backend developers
                         at my first tech support job improve the interface for a tester that they 
                         developed for ME to test their new build.  It was just too difficult to use.
@@ -495,7 +495,8 @@
                             </div>
                             <!-- Tag One -->
                             <div class="tag_one">
-                                <p>tag-one</p>
+                                <p>Courtney Jacobs</p>
+                                <p>Jan 3 2024</p>
                             </div>
                         </button>
                         <!-- The Seconed Circle -->
@@ -509,8 +510,9 @@
                                 </div>
                             </div>
                             <!-- Tag One -->
-                            <div class="tag_two">
-                                <p>tag-two</p>
+                            <div class="tag_one">
+                                <p>Courtney Jacobs</p>
+                                <p>Jan 19 2024</p>
                             </div>
                         </button>
                         <!-- The Third Circle -->
@@ -524,8 +526,9 @@
                                 </div>
                             </div>
                             <!-- Tag One -->
-                            <div class="tag_three">
-                                <p>tag-three</p>
+                            <div class="tag_one">
+                                <p>Courtney Jacobs</p>
+                                <p>Feb 5 2024</p>
                             </div>
                         </button>
                     </div>
