--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         </div>
         <!-- BLOG SECTION -->
         <!-- for BLOG scroll -->
-        <div class="blog_section_id">
+        <section id="blog_section_id">
             <!-- for the BLOG background -->
             <div class="blog_section_class">
                 <!-- For Content -->
@@ -534,8 +534,69 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- -------------- -->
+        <!-- -------------- -->
+        <!-- -------------- -->
+        <!-- -------------- -->
+        <!-- CONTACT SECTION -->
+        <!-- for CONTACT scroll -->
+        <section id="contact_section_id">
+            <!-- for CONTACT background -->
+            <div class="contact_section_class">
+                <!-- For Content -->
+                <div class="contact_section_content">
+                    <div class="section_title">
+                        <p>Contact.</p>
+                    </div>
+                    <!-- Contact Form -->
+                    <div class="contact_section_form">
+                        <form action="#">
+                            <!-- Name -->
+                            <div class="input_div">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" id="name">
+                            </div>
+                            <!-- Email -->
+                            <div class="input_div">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <!-- Message -->
+                            <div class="input_div">
+                                <label for="message">Message</label>
+                                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                            </div>
+                            <!-- SUBMIT BUTTON -->
+                            <div class="submit_button">
+                                <button onclick="sendMail()" id="submitemail">
+                                    <p>Submit</p>
+                                </button>
+                            </div>
 
-        </div>
+                            <!-- Socials -->
+                            <!-- POWERED BY -->
+                            <div class="poweredby">
+                                <!-- <img src="./img/logo/grey_logo_courdevelops.png" alt="Logo"> -->
+                                <small>
+                                    <div class="tabletsocials">
+                                        <!-- SOCIALS MOBILE -->
+                                        <a target="_blank" href="https://github.com/courthub74"><img id="github" src="./img/socials/PurpleSocials/GithubPurple.png" alt="github"></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/courtney-jacobs-develops/"><img id="linkedin" src="./img/socials/PurpleSocials/LinkedinPurple.png" alt="linkedin"></a>
+                                        <a target="_blank" href="https://twitter.com/CourDevelops"><img id="twitter" src="./img/socials/PurpleSocials/TwitterPurple.png" alt="twitter"></a>
+                                        <a target="_blank" href="https://instagram.com/courtj_135"><img id="instagram" src="./img/socials/PurpleSocials/InstagramPurple.png" alt="instagram"></a>
+                                    </div>
+                                    <div class="copyrights">
+                                        <!-- <img src="./img/logo/grey_logo_courdevelops.png" alt="Logo"> -->
+                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp <p>&copy; 2024</p></p>
+                                    </div>
+                                </small>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="navbar.js"></script>
