blog squares shorter

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <div class="courdevelops_description">
                                 <!-- Main Description -->
                                 <div class="main_description">
-                                    <h1>CourDevelops</h1>
+                                    <p class="company_name">CourDevelops</p>
                                     <p>Web Developer</p>
                                 </div>
                                 <!-- The Job Description -->
@@ -394,10 +394,9 @@
                                         <p>Mar 2020 - Present</p>
                                     </div>
                                     <div class="courdevelops_duties">
-                                        <h1>Duties:</h1>
+                                        <p class="company_name">Duties:</p>
                                         <p>SPA Development</p>
                                         <p>UX/UI Design</p>
-                                        <p>APIs</p>
                                     </div>
                                 </div>
                             </div>
@@ -415,7 +414,7 @@
                             <!-- Description -->
                             <div class="slea_description">
                                 <div class="main_description_slea">
-                                    <h1>SLEA</h1>
+                                    <p class="company_name">Service Lane <br> eAdvisor</p>
                                     <p>Tech Supervisor</p>
                                 </div>
                                 <!-- The Job Description -->
@@ -446,7 +445,7 @@
                             <!-- Description -->
                             <div class="r1rcm_description">
                                 <div class="main_description_r1rcm">
-                                    <h1>R1RCM</h1>
+                                    <p class="company_name">R1RCM</p>
                                     <p>Tech Engineer</p>
                                 </div>
                                 <!-- The Job Description -->
