new you and layout

--- a/index.html
+++ b/index.html
@@ -580,13 +580,13 @@
                                 <small>
                                     <div class="tabletsocials">
                                         <!-- SOCIALS MOBILE -->
-                                        <a target="_blank" href="https://github.com/courthub74"><img id="github" src="./img/socials/PurpleSocials/GithubPurple.png" alt="github"></a>
-                                        <a target="_blank" href="https://www.linkedin.com/in/courtney-jacobs-develops/"><img id="linkedin" src="./img/socials/PurpleSocials/LinkedinPurple.png" alt="linkedin"></a>
-                                        <a target="_blank" href="https://twitter.com/CourDevelops"><img id="twitter" src="./img/socials/PurpleSocials/TwitterPurple.png" alt="twitter"></a>
-                                        <a target="_blank" href="https://instagram.com/courtj_135"><img id="instagram" src="./img/socials/PurpleSocials/InstagramPurple.png" alt="instagram"></a>
+                                        <a target="_blank" href="https://github.com/courthub74"><img id="github" src="./img/socials/NewSocials/github.png" alt="github"></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/courtney-jacobs-develops/"><img id="linkedin" src="./img/socials/NewSocials/linkedin.png" alt="linkedin"></a>
+                                        <a target="_blank" href="https://twitter.com/CourDevelops"><img id="twitter" src="./img/socials/NewSocials/twitter.png" alt="twitter"></a>
+                                        <a target="_blank" href="https://instagram.com/courtj_135"><img id="instagram" src="./img/socials/NewSocials/instagram.png" alt="instagram"></a>
                                     </div>
                                     <div class="copyrights">
-                                        <!-- <img src="./img/logo/grey_logo_courdevelops.png" alt="Logo"> -->
+                                        <img src="./img/Courdevelops 2.png" alt="Logo" id="copyright_courdevs">
                                         <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp <p>&copy; 2024</p></p>
                                     </div>
                                 </small>
