--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <div class="home_section_class">
                 <!-- For the HOME content -->
                 <div class="home_section_content">
-                    <div class="head_shot">
-                        <img src="./img/headshot/screensshot2.jpg" id="headshot" alt="headshot">
+                    <div class="back_head_shot">
+                        <div class="head_shot">
+                            <img src="./img/headshot/screensshot2.jpg" id="headshot" alt="headshot">
+                        </div>
                     </div>
                     <div class="name_and_description">
                         <div class="home_name">
@@ -158,6 +160,16 @@
                 <!-- For the PORTFOLIO content -->
                 <div class="portfolio_section_content">
                     <section class="portfolio_squares">
+                        <button class="portfolio_square" id="app_5">
+                            <div class="app">
+                                <img src="./img/experience/experience/MPSSiteSquare.png" id="mps_site" alt="mps_site">
+                            </div>
+                        </button>
+                        <button class="portfolio_square" id="app_3">
+                            <div class="app">
+                                <img src="./img/Projects/MSY.png" id="msy" alt="MSY">
+                            </div>
+                        </button>
                         <button class="portfolio_square" id="app_1">
                             <!-- App 1 Top -->
                             <div class="app">
@@ -167,16 +179,6 @@
                         <button class="portfolio_square" id="app_2">
                             <div class="app">
                                 <img src="./img/Projects/CreateCollab.png" id="create_collab" alt="create_collab">
-                            </div>
-                        </button>
-                        <button class="portfolio_square" id="app_5">
-                            <div class="app">
-                                <img src="./img/experience/experience/MPSSiteSquare.png" id="mps_site" alt="mps_site">
-                            </div>
-                        </button>
-                        <button class="portfolio_square" id="app_3">
-                            <div class="app">
-                                <img src="./img/Projects/MSY.png" id="msy" alt="MSY">
                             </div>
                         </button>
                         <button class="portfolio_square" id="app_4">
