portrait and landscape

--- a/index.html
+++ b/index.html
@@ -38,25 +38,30 @@
             <div class="home_section_class">
                 <!-- For the HOME content -->
                 <div class="home_section_content">
+                    <!-- Head Shot -->
                     <div class="back_head_shot">
                         <div class="head_shot">
                             <img src="./img/headshot/screensshot2.jpg" id="headshot" alt="headshot">
                         </div>
                     </div>
-                    <div class="name_and_description">
-                        <div class="home_name">
-                            <p>Courtney Jacobs</p>
+                    <!-- The Rest of the Page -->
+                    <div class="home_section_words">
+                        <!-- Name and Description -->
+                        <div class="name_and_description">
+                            <div class="home_name">
+                                <p>Courtney Jacobs</p>
+                            </div>
+                            <div class="home_description">
+                                <p>Web Application Maker</p>
+                            </div>
                         </div>
-                        <div class="home_description">
-                            <p>Web Application Maker</p>
+                        <div class="home_slogan">
+                            <p>Enhancing Productivity.</p>
+                            <p>Creating Opportunities.</p>
                         </div>
-                    </div>
-                    <div class="home_slogan">
-                        <p>Enhancing Productivity.</p>
-                        <p>Creating Opportunities.</p>
-                    </div>
-                    <div class="learn_more">
-                        <a href="#">Learn More</a>
+                        <div class="learn_more">
+                            <a href="#">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -594,7 +599,7 @@
                                     </div>
                                     <div class="copyrights">
                                         <img src="./img/Courdevelops 2.png" alt="Logo" id="copyright_courdevs">
-                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp <p>&copy; 2024</p></p>
+                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp &copy; 2024</p>
                                     </div>
                                 </small>
                             </div>
