--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                     <div class="skills_circles_section">
                          <!-- For Landscape Circles -->
                          <div class="skills_one_landscape">
+                            <!-- skills_one_div (html css sass) -->
                             <!-- Skills Circle row -->
                             <div class="skills_circles_one">
                                 <!-- ---------------------- -->
