about revised again

--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
 
                     <div class="passion_things">
                         <p class="user_interface">
-                            <b>Productivity Applications:</b> A web app should
-                            lead the user with an easy, thoughtless 
-                            experience.
+                            <b>Productivity Applications:</b> My passion is to make the 
+                            workforce more efficient through code.
                         </p>
     
                         <p class="gig_econ">
