new portfolio layout

--- a/index.html
+++ b/index.html
@@ -95,19 +95,20 @@
                         I learned web development, eventually improving the tester interface, making whole experience more user friendly for myself and my coworkers.
                     </div> -->
                     <p class="first_para_about">
-                        Computer Science degree holder and Self taught developer.  
-                        Ever since I improved the display features of a tester created by backend developers at my first tech support job, 
-                        I've been hooked. For the last 3 years I've taught myself web development daily.
+                        From design to development, I make web applications focused on
+                        improving the skills, productivity and job opportunity prospects of those
+                        in web development.
                         <br><br>
-                        Along the path of learning, developed logins, and web sites for clients as well as 
-                        productivity applications under my brand <b>CourDevelops</b>.
+                        I've developed logins, web sites for clients, and contributed to open source projects
+                        under my brand <b>CourDevelops</b>.
                         <br><br>
                         <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
-                        <br><br><br>
+                        <br><br>
                         I'm a dedicated self starter with front-end web developer skills, 
                         plus a little experience on the Backend. 
-                        My natural knack for customer service made me a user centric developer.
-                        <br>
+                        My natural knack for and experience with customer service made me a user centric developer.
+                        I champion the simplicity of apps for the user.
+                        <br><br>
                         <!-- <div class="about_page_Logo">
                             <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
                             <p>is the brand.</p>
@@ -138,7 +139,7 @@
                         in the tech workforce. -->
                     </p>
 
-                    <p class="passion_block">
+                    <!-- <p class="passion_block">
                         Things I want to develop:
                     </p>
 
@@ -151,13 +152,13 @@
                         <p class="gig_econ">
                             <b>Gig Economy Applications:</b> People should be able to 
                             leverage technology to obtain work and/or experience without the burden of human bias or logistics.
-                        </p>
+                        </p> -->
     
                         <!-- <p class="web_3">
                             <b>Blockchain/Web 3:</b> The ability to exchange value instantly on the web
                             is so necessary and paramount going into the future.
                         </p> -->
-                    </div>
+                    <!-- </div> -->
                    
                     <!-- Download Resume Div -->
                     <div class="resume_button_div">   
@@ -181,20 +182,14 @@
                 <!-- For the PORTFOLIO content -->
                 <div class="portfolio_section_content">
                     <section class="portfolio_squares">
+                        <button class="portfolio_square" id="app_4">
+                            <div class="app">
+                                <img src="./img/Projects/WorkflowAppLogoLower.png" id="workflow_app" alt="workflow_app">
+                            </div>
+                        </button>
                         <button class="portfolio_square" id="app_5">
                             <div class="app">
                                 <img src="./img/experience/experience/MPSSiteSquare.png" id="mps_site" alt="mps_site">
-                            </div>
-                        </button>
-                        <button class="portfolio_square" id="app_3">
-                            <div class="app">
-                                <img src="./img/Projects/MSY.png" id="msy" alt="MSY">
-                            </div>
-                        </button>
-                        <button class="portfolio_square" id="app_1">
-                            <!-- App 1 Top -->
-                            <div class="app">
-                                <img src="./img/Projects/SkillProjectLogo.png" id="skill_project" alt="skill_project">
                             </div>
                         </button>
                         <button class="portfolio_square" id="app_2">
@@ -202,11 +197,22 @@
                                 <img src="./img/Projects/CreateCollab.png" id="create_collab" alt="create_collab">
                             </div>
                         </button>
-                        <button class="portfolio_square" id="app_4">
+                        <button class="portfolio_square" id="app_3">
                             <div class="app">
-                                <img src="./img/Projects/WorkflowApp.png" id="workflow_app" alt="workflow_app">
+                                <img src="./img/Projects/MSY.png" id="msy" alt="MSY">
                             </div>
                         </button>
+                        <button class="portfolio_square" id="app_5">
+                            <div class="app">
+                                <p>Open Source Project</p>
+                            </div>
+                        </button>
+                        <!-- <button class="portfolio_square" id="app_1"> -->
+                            <!-- App 1 Top -->
+                            <!-- <div class="app"> -->
+                                <!-- <img src="./img/Projects/SkillProjectLogo.png" id="skill_project" alt="skill_project"> -->
+                            <!-- </div> -->
+                        <!-- </button> -->
                     </section>
                 </div>
             </div>
