tablet version display

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                         <br><br>
                         I'm a dedicated self starter with front-end web developer skills, 
                         plus a little experience on the Backend. 
-                        My natural knack for and experience with customer service made me a user centric developer.
-                        I champion the simplicity of apps for the user.
+                        I am a user centric developer apps should be a stress-free experience for the user.
                         <br><br>
                         <!-- <div class="about_page_Logo">
                             <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
