home and about tablet landscape

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                             </div>
                         </div>
                         <div class="home_slogan">
+                            <!-- <p>Coding for the Real World.</p> -->
                             <p>Enhancing Productivity.</p>
                             <p>Creating Opportunities.</p>
                         </div>
