need to fix skills tablet landscape

--- a/index.html
+++ b/index.html
@@ -100,14 +100,13 @@
                         improving the skills, productivity and job opportunity prospects of those
                         in web development.
                         <br><br>
-                        I've developed logins, web sites for clients, and contributed to open source projects
-                        under my brand <b>CourDevelops</b>.
+                        My brand is <b>CourDevelops</b>.
                         <br><br>
                         <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
                         <br><br>
                         I'm a dedicated self starter with front-end web developer skills, 
                         plus a little experience on the Backend. 
-                        I am a user centric developer apps should be a stress-free experience for the user.
+                        I am very user centric.  Apps should be a stress-free experience for the user.
                         <br><br>
                         <!-- <div class="about_page_Logo">
                             <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
