skills tablet landscape

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <br><br>
                         I'm a dedicated self starter with front-end web developer skills, 
                         plus a little experience on the Backend. 
-                        I am very user centric.  Apps should be a stress-free experience for the user.
+                        I am very user centric.  Apps should be a stress-free, thoughtless experience for the user.
                         <br><br>
                         <!-- <div class="about_page_Logo">
                             <img src="./img/CourdevelopsWhite.png" id="about_page_logo" alt="CourDevelops">
@@ -621,7 +621,7 @@
                                     </div>
                                     <div class="copyrights">
                                         <img src="./img/Courdevelops 2.png" alt="Logo" id="copyright_courdevs">
-                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp &copy; 2024</p>
+                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> with <span class="courdev">HTML CSS</span> and <span class="courdev">JS</span> &nbsp &copy; 2024</p>
                                     </div>
                                 </small>
                             </div>
