--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                                     </div>
                                     <div class="copyrights">
                                         <img src="./img/Courdevelops 2.png" alt="Logo" id="copyright_courdevs">
-                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> with <span class="courdev">HTML CSS</span> and <span class="courdev">JS</span> &nbsp &copy; 2024</p>
+                                        <p>Powered by&nbsp<span class="courdev">CourDevelops</span> &nbsp &copy; 2024</p>
                                     </div>
                                 </small>
                             </div>
